[workspace]
resolver = "1" # unifying Cargo features asap for Book tests
members = [
    "benches",
    "examples/actix_subscriptions",
    "examples/basic_subscriptions",
    "juniper_codegen",
    "juniper",
    "juniper_hyper",
    "juniper_iron",
    "juniper_rocket",
    "juniper_subscriptions",
    "juniper_graphql_transport_ws",
    "juniper_graphql_ws",
    "juniper_warp",
    "juniper_actix",
    "tests/codegen",
    "tests/integration",
]
