[package]
name = "juniper_benchmarks"
version = "0.0.0"
edition = "2021"
authors = ["Christoph Herzog <chris@theduke.at>"]
publish = false

[dependencies]
futures = "0.3"
juniper = { path = "../juniper" }

[dev-dependencies]
criterion = "0.5"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[[bench]]
name = "benchmark"
harness = false
