[package]
name = "juniper_book"
version = "0.0.0"
edition = "2024"
authors = ["Kai Ren <tyranron@gmail.com>"]
publish = false

[dependencies]
anyhow = "1.0"
dataloader = "0.18"
derive_more = { version = "2.0", features = ["display", "from", "try_into"] }
juniper = { path = "../juniper", features = ["anyhow", "jiff", "schema-language"] }
juniper_subscriptions = { path = "../juniper_subscriptions" }
serde_json = "1.0"
tokio = { version = "1.0", features = ["sync"] }

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
[lints.rust]
closure_returning_async_block = "warn"
future_incompatible = { level = "warn", priority = -1 }
impl_trait_redundant_captures = "warn"
non_ascii_idents = "forbid"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
