[package]
name = "juniper_actix"
version = "0.5.0-dev"
edition = "2021"
rust-version = "1.65"
description = "`juniper` GraphQL integration with `actix-web`."
license = "BSD-2-Clause"
authors = ["Jordao Rosario <jordao.rosario01@gmail.com>"]
documentation = "https://docs.rs/juniper_actix"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_actix"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
keywords = ["actix-web", "apollo", "graphql", "juniper", "websocket"]
exclude = ["/examples/", "/release.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
subscriptions = [
    "dep:actix",
    "dep:actix-web-actors",
    "dep:juniper_graphql_ws",
    "dep:tokio",
]

[dependencies]
actix = { version = ">=0.12,<=0.13", optional = true }
actix-http = "3.2"
actix-web = "4.2.1"
actix-web-actors = { version = "4.1", optional = true }
anyhow = "1.0.47"
futures = "0.3.22"
juniper = { version = "0.16.0-dev", path = "../juniper", default-features = false }
juniper_graphql_ws = { version = "0.4.0-dev", path = "../juniper_graphql_ws", optional = true }
http = "0.2.4"
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.18"
thiserror = "1.0"
tokio = { version = "1.0", features = ["sync"], optional = true }

# Fixes for MSRV check.
# TODO: Try remove on upgrade to 4.3 version of `actix-web` crate.
derive_more = { version = "0.99.8", default-features = false }

[dev-dependencies]
actix-cors = "0.6"
actix-identity = "0.5"
actix-rt = "2.0"
actix-test = "0.1"
async-stream = "0.3"
bytes = "1.0"
env_logger = "0.10"
juniper = { version = "0.16.0-dev", path = "../juniper", features = ["expose-test-schema"] }
log = "0.4"
tokio = "1.0"
