[package]
name = "juniper_actix"
version = "0.5.0-dev"
edition = "2021"
rust-version = "1.73"
description = "`juniper` GraphQL integration with `actix-web`."
license = "BSD-2-Clause"
authors = [
    "Jordao Rosario <jordao.rosario01@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/juniper_actix"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_actix"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
keywords = ["actix-web", "apollo", "graphql", "juniper", "websocket"]
exclude = ["/release.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
subscriptions = ["dep:actix-ws", "dep:juniper_graphql_ws"]

[dependencies]
actix-http = "3.2"
actix-web = "4.4"
actix-ws = { version = "0.2", optional = true }
anyhow = "1.0.47"
futures = "0.3.22"
juniper = { version = "0.16.0-dev", path = "../juniper", default-features = false }
juniper_graphql_ws = { version = "0.4.0-dev", path = "../juniper_graphql_ws", features = ["graphql-transport-ws", "graphql-ws"], optional = true }
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.18"

[dev-dependencies]
actix-cors = "0.7"
actix-identity = "0.7"
actix-rt = "2.0"
actix-test = "0.1"
async-stream = "0.3"
bytes = "1.0"
env_logger = "0.11"
juniper = { version = "0.16.0-dev", path = "../juniper", features = ["expose-test-schema"] }
log = "0.4"
rand = "0.8"
tokio = "1.0"

[[example]]
name = "subscription"
required-features = ["subscriptions"]
