[package]
name = "juniper_actix"
version = "0.7.0"
edition = "2024"
rust-version = "1.85"
description = "`juniper` GraphQL integration with `actix-web`."
license = "BSD-2-Clause"
authors = [
    "Jordao Rosario <jordao.rosario01@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/juniper_actix"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_actix"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
keywords = ["actix-web", "apollo", "graphql", "juniper", "websocket"]
exclude = ["/release.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
subscriptions = [
    "dep:actix-ws",
    "dep:derive_more",
    "dep:futures", 
    "dep:juniper_graphql_ws",
]

[dependencies]
actix-web = "4.4"
actix-ws = { version = "0.3", optional = true }
derive_more = { version = "2.0", features = ["display", "error"], optional = true }
futures = { version = "0.3.22", optional = true }
juniper = { version = "0.17", path = "../juniper", default-features = false }
juniper_graphql_ws = { version = "0.5", path = "../juniper_graphql_ws", features = ["graphql-transport-ws", "graphql-ws"], optional = true }
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.18"

[dev-dependencies]
actix-cors = "0.7"
actix-http = "3.2"
actix-rt = "2.0"
actix-test = "0.1"
anyhow = "1.0.47"
async-stream = "0.3"
env_logger = "0.11"
futures = "0.3"
juniper = { version = "0.17", path = "../juniper", features = ["expose-test-schema"] }
log = "0.4"
rand = "0.9"
tokio = "1.0"

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
[lints.rust]
closure_returning_async_block = "warn"
future_incompatible = { level = "warn", priority = -1 }
impl_trait_redundant_captures = "warn"
missing_docs = "warn"
non_ascii_idents = "forbid"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[[example]]
name = "subscription"
required-features = ["subscriptions"]
