[package]
name = "juniper_axum"
version = "0.1.0"
edition = "2021"
rust-version = "1.73"
description = "`juniper` GraphQL integration with `axum`."
license = "BSD-2-Clause"
authors = [
    "Benno Tielen <Benno@tielen.nl>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/juniper_axum"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_axum"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
keywords = ["apollo", "axum", "graphql", "juniper", "websocket"]
exclude = ["/tests/", "/release.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
subscriptions = ["axum/ws", "dep:futures", "dep:juniper_graphql_ws", "dep:serde_json"]

[dependencies]
axum = "0.6"
futures = { version = "0.3.22", optional = true }
juniper = { version = "0.16.0-dev", path = "../juniper", default-features = false }
juniper_graphql_ws = { version = "0.4.0-dev", path = "../juniper_graphql_ws", features = ["graphql-transport-ws", "graphql-ws"], optional = true }
serde_json = { version = "1.0.18", optional = true }

[dev-dependencies]
axum = { version = "0.6", features = ["macros"] }
hyper = "0.14"
juniper = { version = "0.16.0-dev", path = "../juniper", features = ["expose-test-schema"] }
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"


# TODO
anyhow = "1.0"
tokio-tungstenite = "0.20"
tower = "0.4"

[[example]]
name = "simple"
required-features = ["subscriptions"]