[package]
name = "juniper_axum"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
description = "`juniper` GraphQL integration with `axum`."
license = "BSD-2-Clause"
authors = [
    "Benno Tielen <Benno@tielen.nl>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/juniper_axum"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_axum"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
keywords = ["apollo", "axum", "graphql", "juniper", "websocket"]
exclude = ["/release.toml"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
subscriptions = [
    "axum/ws", 
    "juniper_graphql_ws/graphql-ws", 
    "dep:derive_more", 
    "dep:futures",
]

[dependencies]
axum = { version = "0.8", features = ["json", "query"], default-features = false }
derive_more = { version = "2.0", features = ["display", "error"], optional = true }
futures = { version = "0.3.22", optional = true }
juniper = { version = "0.17.0", path = "../juniper", default-features = false }
juniper_graphql_ws = { version = "0.5", path = "../juniper_graphql_ws", features = ["graphql-transport-ws"] }
serde = { version = "1.0.122", features = ["derive"] }
serde_json = "1.0.18"

# Fixes for `minimal-versions` check.
# TODO: Try remove on upgrade of `axum` crate.
bytes = "1.2"

[dev-dependencies]
anyhow = "1.0"
axum = { version = "0.8.1", features = ["http1", "macros", "tokio"] }
futures = "0.3.22"
juniper = { version = "0.17", path = "../juniper", features = ["expose-test-schema"] }
tokio = { version = "1.20", features = ["macros", "net", "rt-multi-thread", "time"] }
tokio-stream = "0.1"
tokio-tungstenite = "0.27"
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
urlencoding = "2.1"

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
[lints.rust]
closure_returning_async_block = "warn"
future_incompatible = { level = "warn", priority = -1 }
impl_trait_redundant_captures = "warn"
missing_docs = "warn"
non_ascii_idents = "forbid"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"

[[example]]
name = "custom"
required-features = ["subscriptions"]

[[example]]
name = "simple"
required-features = ["subscriptions"]

[[test]]
name = "ws_test_suite"
required-features = ["subscriptions"]
