[package]
name = "juniper_benchmarks"
version = "0.1.0"
authors = ["Christoph Herzog <chris@theduke.at>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bench]]
name = "benchmark"
harness = false

[dependencies]
juniper = { path = "../juniper" }
futures =  "0.3.1"

[dev-dependencies]
criterion = "0.2.11"
tokio = { version = "0.2.0", features = ["rt-threaded", "rt-core"] }
