[package]
name = "juniper_benchmarks"
version = "0.0.0"
edition = "2018"
authors = ["Christoph Herzog <chris@theduke.at>"]
publish = false

[dependencies]
futures = "0.3"
juniper = { path = "../juniper" }

[dev-dependencies]
criterion = "0.3"
tokio = { version = "1", features = ["rt-multi-thread"] }

[[bench]]
name = "benchmark"
harness = false
