[package]
name = "juniper_codegen"
version = "0.16.0-dev"
edition = "2021"
rust-version = "1.65"
description = "Code generation for `juniper` crate."
license = "BSD-2-Clause"
authors = [
    "Magnus Hallin <mhallin@fastmail.com>",
    "Christoph Herzog <chris@theduke.at>",
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/juniper-codegen"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_codegen"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
keywords = ["codegen", "graphql", "juniper", "macros"]
exclude = ["/release.toml"]

[lib]
proc-macro = true

[dependencies]
proc-macro-error = "1.0.2"
proc-macro2 = "1.0.4"
quote = "1.0.9"
syn = { version = "1.0.90", features = ["extra-traits", "full", "parsing", "visit", "visit-mut"], default-features = false }
url = "2.0"

[dev-dependencies]
derive_more = "0.99.8"
futures = "0.3.22"
juniper = { path = "../juniper" }
serde = "1.0.122"
