[package]
name = "juniper_codegen"
version = "0.16.0"
edition = "2024"
rust-version = "1.85"
description = "Code generation for `juniper` crate."
license = "BSD-2-Clause"
authors = [
    "Magnus Hallin <mhallin@fastmail.com>",
    "Christoph Herzog <chris@theduke.at>",
    "Ilya Solovyiov <ilya.solovyiov@gmail.com>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/juniper-codegen"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_codegen"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
keywords = ["codegen", "graphql", "juniper", "macros"]
exclude = ["/release.toml"]

[lib]
proc-macro = true

[dependencies]
derive_more = { version = "2.0", features = ["as_ref", "deref", "display"] }
proc-macro2 = "1.0.4"
quote = "1.0.9"
syn = { version = "2.0", features = ["extra-traits", "full", "visit", "visit-mut"] }
url = "2.0"

[dev-dependencies]
derive_more = { version = "2.0", features = ["from", "try_into"] }
futures = "0.3.22"
juniper = { path = "../juniper" }
serde = "1.0.122"

[lints.clippy]
allow_attributes = "warn"
allow_attributes_without_reason = "warn"
[lints.rust]
closure_returning_async_block = "warn"
future_incompatible = { level = "warn", priority = -1 }
impl_trait_redundant_captures = "warn"
missing_docs = "warn"
non_ascii_idents = "forbid"
unsafe_code = "forbid"
unused_crate_dependencies = "warn"
