[package]
name = "juniper_graphql_ws"
version = "0.4.0"
edition = "2018"
description = "GraphQL over WebSocket protocol implementation for `juniper` crate."
license = "BSD-2-Clause"
authors = ["Christopher Brown <ccbrown112@gmail.com>"]
documentation = "https://docs.rs/juniper_graphql_ws"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_graphql_ws"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
keywords = ["apollo", "graphql", "graphql-ws", "subscription", "websocket"]
exclude = ["/release.toml"]

[dependencies]
juniper = { version = "0.16.0", path = "../juniper", default-features = false }
juniper_subscriptions = { version = "0.17.0", path = "../juniper_subscriptions" }
serde = { version = "1.0.8", features = ["derive"], default-features = false }
tokio = { version = "1.0", features = ["macros", "rt", "time"], default-features = false }

[dev-dependencies]
serde_json = "1.0"
