[package]
name = "juniper_hyper"
version = "0.9.0-dev"
edition = "2021"
rust-version = "1.65"
description = "`juniper` GraphQL integration with `hyper`."
license = "BSD-2-Clause"
authors = ["Damir Vandic <info@dvic.io>"]
documentation = "https://docs.rs/juniper_hyper"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_hyper"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
keywords = ["apollo", "graphql", "hyper", "juniper"]
exclude = ["/examples/", "/release.toml"]

[dependencies]
futures = "0.3.22"
hyper = { version = "0.14.7", features = ["server", "runtime"] }
juniper = { version = "0.16.0-dev", path = "../juniper", default-features = false }
serde_json = "1.0.18"
tokio = "1.0"
url = "2.0"

# Fixes for MSRV check.
# TODO: Try remove on upgrade of `hyper` crate.
http-body = "0.4.5"

[dev-dependencies]
juniper = { version = "0.16.0-dev", path = "../juniper", features = ["expose-test-schema"] }
pretty_env_logger = "0.5"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
