[package]
name = "juniper_hyper"
version = "0.9.0-dev"
edition = "2021"
rust-version = "1.73"
description = "`juniper` GraphQL integration with `hyper`."
license = "BSD-2-Clause"
authors = [
    "Damir Vandic <info@dvic.io>",
    "Kai Ren <tyranron@gmail.com>",
]
documentation = "https://docs.rs/juniper_hyper"
homepage = "https://github.com/graphql-rust/juniper/tree/master/juniper_hyper"
repository = "https://github.com/graphql-rust/juniper"
readme = "README.md"
categories = ["asynchronous", "web-programming", "web-programming::http-server"]
keywords = ["apollo", "graphql", "hyper", "juniper"]
exclude = ["/examples/", "/release.toml"]

[dependencies]
futures = "0.3.22"
http-body-util = "0.1"
hyper = { version = "1.0", features = ["server"] }
juniper = { version = "0.16.0", path = "../juniper", default-features = false }
serde_json = "1.0.18"
tokio = "1.0"
url = "2.0"

[dev-dependencies]
hyper = { version = "1.0", features = ["http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
juniper = { version = "0.16.0", path = "../juniper", features = ["expose-test-schema"] }
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"], default-features = false }
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }
